--- a/README.qmd
+++ b/README.qmd
@@ -1,24 +1,21 @@
 ---
-output: github_document
+format: 
+  gfm: default
+  html: default
+bibliography: grateful-refs.bib
 ---
 
 <!-- README.md is generated from README.qmd. Please edit that file -->
 
-
-# tima <img src='https://raw.githubusercontent.com/taxonomicallyinformedannotation/tima/main/man/figures/logo.svg' align="right" height="139" />
+# tima <img src="https://raw.githubusercontent.com/taxonomicallyinformedannotation/tima/main/man/figures/logo.svg" align="right" height="139"/>
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/tima)](https://CRAN.R-project.org/package=tima)
-[![R-CMD-check](https://github.com/taxonomicallyinformedannotation/tima/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/taxonomicallyinformedannotation/tima/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/taxonomicallyinformedannotation/tima/graph/badge.svg)](https://app.codecov.io/gh/taxonomicallyinformedannotation/tima)
-[![r-universe badge](https://taxonomicallyinformedannotation.r-universe.dev/tima/badges/version?&color=blue&style=classic)](https://taxonomicallyinformedannotation.r-universe.dev/tima)
-[![Docker](https://badgen.net/badge/docker/tima-r?icon&label)](https://hub.docker.com/r/adafede/tima-r/)
-[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.5797920.svg)](https://doi.org/10.5281/zenodo.5797920)
+
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental) [![CRAN status](https://www.r-pkg.org/badges/version/tima)](https://CRAN.R-project.org/package=tima) [![R-CMD-check](https://github.com/taxonomicallyinformedannotation/tima/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/taxonomicallyinformedannotation/tima/actions/workflows/R-CMD-check.yaml) [![Codecov test coverage](https://codecov.io/gh/taxonomicallyinformedannotation/tima/graph/badge.svg)](https://app.codecov.io/gh/taxonomicallyinformedannotation/tima) [![r-universe badge](https://taxonomicallyinformedannotation.r-universe.dev/tima/badges/version?&color=blue&style=classic)](https://taxonomicallyinformedannotation.r-universe.dev/tima) [![Docker](https://badgen.net/badge/docker/tima-r?icon&label)](https://hub.docker.com/r/adafede/tima-r/) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.5797920.svg)](https://doi.org/10.5281/zenodo.5797920)
+
 <!-- badges: end -->
 
-The initial work is available at <https://doi.org/10.3389/fpls.2019.01329>, with many improvements made since then.
-The workflow is illustrated below.
+The initial work is available at <https://doi.org/10.3389/fpls.2019.01329>, with many improvements made since then. The workflow is illustrated below.
 
 ![Workflow](https://raw.githubusercontent.com/taxonomicallyinformedannotation/tima/main/man/figures/tima.svg)\
 
@@ -28,14 +25,14 @@ This repository contains everything needed to perform **T**axonomically **I**nfo
 
 Here is what you *minimally* need:
 
-- A feature list (.csv) (see [example features](https://github.com/taxonomicallyinformedannotation/tima-example-files/blob/main/example_features.csv))
-- A spectral file corresponding to the feature list (.mgf) (see [example spectra](https://github.com/taxonomicallyinformedannotation/tima-example-files/blob/main/example_spectra_mini.mgf))
-- The biological source(s) of the sample(s) you are annotating (.csv) (see [example metadata](https://github.com/taxonomicallyinformedannotation/tima-example-files/blob/main/example_metadata.tsv)) (File is optional if only a single organism)
+-   A feature list (.csv) (see [example features](https://github.com/taxonomicallyinformedannotation/tima-example-files/blob/main/example_features.csv))
+-   A spectral file corresponding to the feature list (.mgf) (see [example spectra](https://github.com/taxonomicallyinformedannotation/tima-example-files/blob/main/example_spectra_mini.mgf))
+-   The biological source(s) of the sample(s) you are annotating (.csv) (see [example metadata](https://github.com/taxonomicallyinformedannotation/tima-example-files/blob/main/example_metadata.tsv)) (File is optional if only a single organism)
 
 Optionally, you may want to add:
 
-- An in-house structure-organism pairs library (we provide **[LOTUS](https://lotusnprod.github.io/lotus-manuscript/)** as starting point for each user)
-- Your own manual or automated annotations (we currently support annotations coming from SIRIUS (with some limitations))
+-   An in-house structure-organism pairs library (we provide [**LOTUS**](https://lotusnprod.github.io/lotus-manuscript/) as starting point for each user)
+-   Your own manual or automated annotations (we currently support annotations coming from SIRIUS (with some limitations))
 
 ## Installation
 
@@ -58,9 +55,7 @@ Then, you should be able to install the rest with:
 tima::install()
 ```
 
-Normally, everything you need should then be installed (as tested in [here](https://github.com/taxonomicallyinformedannotation/tima-r/actions/workflows/external-use.yaml)).
-If for some reason, some packages were not installed, try to install them manually.
-To avoid such issues, we offer a containerized version (see [Docker](#docker)).
+Normally, everything you need should then be installed (as tested in [here](https://github.com/taxonomicallyinformedannotation/tima-r/actions/workflows/external-use.yaml)). If for some reason, some packages were not installed, try to install them manually. To avoid such issues, we offer a containerized version (see [Docker](#docker)).
 
 Once installed, you are ready to go through our [documentation](https://taxonomicallyinformedannotation.github.io/tima/articles/), with the major steps detailed.
 
@@ -78,10 +73,9 @@ tima::run_app()
 
 This command will open a small app in your default browser.
 
-### Docker
+### Docker {#docker}
 
-A container is also available, together with a small compose file.
-Main commands are below:
+A container is also available, together with a small compose file. Main commands are below:
 
 ``` bash
 docker pull adafede/tima-r
@@ -123,18 +117,33 @@ General: <https://doi.org/10.1038/nbt.3597>
 
 General: <https://doi.org/10.1038/s41592-019-0344-8>
 
-- *CSI:FingerId*: <https://doi.org/10.1073/pnas.1509788112>
-- *ZODIAC*: <https://doi.org/10.1038/s42256-020-00234-6>
-- *CANOPUS*: <https://doi.org/10.1038/s41587-020-0740-8>
-- *COSMIC*: <https://doi.org/10.1038/s41587-021-01045-9>
+-   *CSI:FingerId*: <https://doi.org/10.1073/pnas.1509788112>
+-   *ZODIAC*: <https://doi.org/10.1038/s42256-020-00234-6>
+-   *CANOPUS*: <https://doi.org/10.1038/s41587-020-0740-8>
+-   *COSMIC*: <https://doi.org/10.1038/s41587-021-01045-9>
 
 ### Others
 
-- The *RforMassSpectrometry* packages suite: <https://doi.org/10.3390/metabo12020173>
-- ECMDB 2.0: <https://doi.org/10.1093/nar/gkv1060>
-- HMDB 5.0: <https://doi.org/10.1093/nar/gkab1062>
-- MassBank: <https://doi.org/10.5281/zenodo.3378723>
-- Merlin: <https://doi.org/10.5281/zenodo.13911806>
-- NPClassifier: <https://doi.org/10.1021/acs.jnatprod.1c00399>
-- ROTL: <https://doi.org/10.1111/2041-210X.12593>
-- Spectral entropy: <https://doi.org/10.1038/s41592-021-01331-z>
+-   ECMDB 2.0: <https://doi.org/10.1093/nar/gkv1060>
+-   HMDB 5.0: <https://doi.org/10.1093/nar/gkab1062>
+-   MassBank: <https://doi.org/10.5281/zenodo.3378723>
+-   Merlin: <https://doi.org/10.5281/zenodo.13911806>
+-   NPClassifier: <https://doi.org/10.1021/acs.jnatprod.1c00399>
+
+## Additional software credits
+
+```{r, echo = FALSE, message = FALSE}
+# Check if DESCRIPTION is in current dir
+# Else `altdoc` will not find the dependencies
+desc_path <- if (file.exists("DESCRIPTION")) {
+  "."
+} else {
+  ".."
+}
+grateful::cite_packages(
+  output = "table",
+  out.dir = getwd(),
+  path = desc_path
+) |> 
+  knitr::kable()
+```
