--- a/README.qmd
+++ b/README.qmd
@@ -140,15 +140,14 @@ desc_path <- if (file.exists("DESCRIPTION")) {
 } else {
   ".."
 }
-bib_path <- if (file.exists("grateful-refs.bib")) {
-  "grateful-refs.bib"
-} else {
-  "../grateful-refs.bib"
+# TIMA specific
+if (!file.exists("grateful-refs.bib")) {
+  file.copy(from = "../grateful-refs.bib", to = "grateful-refs.bib")
 }
 grateful::cite_packages(
   output = "table",
   out.dir = getwd(),
   path = desc_path
-) |> 
+) |>
   knitr::kable()
 ```
