--- a/README.qmd
+++ b/README.qmd
@@ -2,6 +2,7 @@
 format: 
   gfm: default
   html: default
+bibliography: ../grateful-refs.bib
 ---
 
 <!-- README.md is generated from README.qmd. Please edit that file -->
@@ -140,13 +141,10 @@ desc_path <- if (file.exists("DESCRIPTION")) {
   ".."
 }
 # TIMA specific
-bib_path <- if (file.exists("grateful-refs.bib")) {
-  "grateful-refs.bib"
-} else {
-  "../grateful-refs.bib"
+if (!file.exists("../grateful-refs.bib")) {
+  file.copy(from = "grateful-refs.bib", to = "../grateful-refs.bib")
 }
 grateful::cite_packages(
-  bib.file = bib_path,
   output = "table",
   out.dir = getwd(),
   path = desc_path
