--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -48,9 +48,9 @@ title = {{docopt}: Command-Line Interface Specification Language},
 }
 @Manual{DT,
 title = {{DT}: A Wrapper of the JavaScript Library `{DataTables}'},
-  author = {Yihui Xie and Joe Cheng and Xianying Tan},
-  year = {2024},
-  note = {R package version 0.33},
+  author = {Yihui Xie and Joe Cheng and Xianying Tan and Garrick Aden-Buie},
+  year = {2025},
+  note = {R package version 0.34.0},
   url = {https://CRAN.R-project.org/package=DT},
   doi = {10.32614/CRAN.package.DT},
 }
@@ -66,7 +66,7 @@ title = {{fs}: Cross-Platform File System Operations Based on `{libuv}'},
 title = {{gt}: Easily Create Presentation-Ready Display Tables},
   author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and Alexandra Lauer and JooYoung Seo and Ken Brevoort and Olivier Roy},
   year = {2025},
-  note = {R package version 1.0.0},
+  note = {R package version 1.1.0},
   url = {https://CRAN.R-project.org/package=gt},
   doi = {10.32614/CRAN.package.gt},
 }
@@ -137,8 +137,8 @@ title = {{knitr}: A Comprehensive Tool for Reproducible Research in {R}},
 @Manual{logger,
 title = {{logger}: A Lightweight, Modern and Flexible Logging Utility},
   author = {Gergely Daróczi and Hadley Wickham},
-  year = {2024},
-  note = {R package version 0.4.0},
+  year = {2025},
+  note = {R package version 0.4.1},
   url = {https://CRAN.R-project.org/package=logger},
   doi = {10.32614/CRAN.package.logger},
 }
@@ -392,8 +392,8 @@ title = {{tima}: Taxonomically Informed Metabolite Annotation},
 @Manual{visNetwork,
 title = {{visNetwork}: Network Visualization using `{vis.js}' Library},
   author = {{Almende B.V. and Contributors} and Benoit Thieurmel},
-  year = {2022},
-  note = {R package version 2.1.2},
+  year = {2025},
+  note = {R package version 2.1.4},
   url = {https://CRAN.R-project.org/package=visNetwork},
   doi = {10.32614/CRAN.package.visNetwork},
 }
