--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -26,7 +26,7 @@ title = {{BiocManager}: Access the Bioconductor Project Package Repository},
 title = {{BiocParallel}: Bioconductor facilities for parallel evaluation},
   author = {Jiefei Wang and Martin Morgan and Valerie Obenchain and Michel Lang and Ryan Thompson and Nitesh Turaga},
   year = {2025},
-  note = {R package version 1.43.4},
+  note = {R package version 1.44.0},
   url = {https://bioconductor.org/packages/BiocParallel},
   doi = {10.18129/B9.bioc.BiocParallel},
 }
@@ -80,7 +80,7 @@ title = {{gt}: Easily Create Presentation-Ready Display Tables},
 }
 @Article{igraph2006,
   title = {The igraph software package for complex network research},
-  author = {Gabor Csardi and Tamas Nepusz},
+  author = {Gábor Csárdi and Tamás Nepusz},
   journal = {InterJournal},
   volume = {Complex Systems},
   pages = {1695},
@@ -88,11 +88,19 @@ title = {{gt}: Easily Create Presentation-Ready Display Tables},
   url = {https://igraph.org},
 }
 
+@Article{igraph2023,
+  title = {igraph enables fast and robust network analysis across programming languages},
+  author = {Michael Antonov and Gábor Csárdi and Szabolcs Horvát and Kirill Müller and Tamás Nepusz and Daniel Noom and Maëlle Salmon and Vincent Traag and Brooke Foucault Welles and Fabio Zanini},
+  journal = {arXiv preprint arXiv:2311.10260},
+  year = {2023},
+  doi = {10.48550/arXiv.2311.10260},
+}
+
 @Manual{igraph2025,
   title = {{igraph}: Network Analysis and Visualization in R},
-  author = {Gábor Csárdi and Tamás Nepusz and Vincent Traag and Szabolcs Horvát and Fabio Zanini and Daniel Noom and Kirill Müller},
+  author = {Gábor Csárdi and Tamás Nepusz and Vincent Traag and Szabolcs Horvát and Fabio Zanini and Daniel Noom and Kirill Müller and David Schoch and Maëlle Salmon},
   year = {2025},
-  note = {R package version 2.1.4},
+  note = {R package version 2.2.1},
   doi = {10.5281/zenodo.7682609},
   url = {https://CRAN.R-project.org/package=igraph},
 }
@@ -157,7 +165,7 @@ title = {{MsBackendMgf}: Mass Spectrometry Data Backend for Mascot Generic Forma
 Files},
   author = {Laurent Gatto and Johannes Rainer and Sebastian Gibb},
   year = {2025},
-  note = {R package version 1.17.0},
+  note = {R package version 1.18.0},
   url = {https://bioconductor.org/packages/MsBackendMgf},
   doi = {10.18129/B9.bioc.MsBackendMgf},
 }
@@ -193,15 +201,15 @@ title = {{msentropy}: Spectral Entropy for Mass Spectrometry Data},
 title = {{reticulate}: Interface to `{Python}'},
   author = {Kevin Ushey and JJ Allaire and Yuan Tang},
   year = {2025},
-  note = {R package version 1.43.0},
+  note = {R package version 1.44.0},
   url = {https://CRAN.R-project.org/package=reticulate},
   doi = {10.32614/CRAN.package.reticulate},
 }
-@Manual{rmarkdown2024,
+@Manual{rmarkdown2025,
 title = {{rmarkdown}: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2024},
-  note = {R package version 2.29},
+  year = {2025},
+  note = {R package version 2.30},
   url = {https://github.com/rstudio/rmarkdown},
 }
 
