--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -345,7 +345,7 @@ title = {{testthat}: Get Started with Testing},
   year = {2011},
   volume = {3},
   pages = {5--10},
-  url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
+  url = {https://journal.r-project.org/articles/RJ-2011-002/},
 }
 @Article{tidyfst,
 title = {{tidyfst}: Tidy Verbs for Fast Data Manipulation},
