--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -18,7 +18,7 @@ title = {{R}: A Language and Environment for Statistical Computing},
 title = {{BiocManager}: Access the Bioconductor Project Package Repository},
   author = {Martin Morgan and Marcel Ramos},
   year = {2025},
-  note = {R package version 1.30.26},
+  note = {R package version 1.30.27},
   url = {https://CRAN.R-project.org/package=BiocManager},
   doi = {10.32614/CRAN.package.BiocManager},
 }
@@ -196,6 +196,14 @@ title = {{msentropy}: Spectral Entropy for Mass Spectrometry Data},
   note = {R package version 0.1.4},
   url = {https://CRAN.R-project.org/package=msentropy},
   doi = {10.32614/CRAN.package.msentropy},
+}
+@Manual{Rutils,
+title = {{R.utils}: Various Programming Utilities},
+  author = {Henrik Bengtsson},
+  year = {2025},
+  note = {R package version 2.13.0},
+  url = {https://CRAN.R-project.org/package=R.utils},
+  doi = {10.32614/CRAN.package.R.utils},
 }
 @Manual{reticulate,
 title = {{reticulate}: Interface to `{Python}'},
@@ -404,6 +412,14 @@ title = {{visNetwork}: Network Visualization using `{vis.js}' Library},
   note = {R package version 2.1.4},
   url = {https://CRAN.R-project.org/package=visNetwork},
   doi = {10.32614/CRAN.package.visNetwork},
+}
+@Manual{withr,
+title = {{withr}: Run Code `{With}' Temporarily Modified Global State},
+  author = {Jim Hester and Lionel Henry and Kirill Müller and Kevin Ushey and Hadley Wickham and Winston Chang},
+  year = {2024},
+  note = {R package version 3.0.2},
+  url = {https://CRAN.R-project.org/package=withr},
+  doi = {10.32614/CRAN.package.withr},
 }
 @Manual{yaml,
 title = {{yaml}: Methods to Convert R Data to YAML and Back},
