--- a/vignettes/articles/III-processing.qmd
+++ b/vignettes/articles/III-processing.qmd
@@ -48,7 +48,7 @@ This vignette describes how **T**axonomically **I**nformed **M**etabolite **A**n
 If you followed all previous steps successfully, this should be a piece of cake, you deserve it!
 
 ```{r weight-all, warning=FALSE}
-tima::tima_full()
+tima::run_tima()
 ```
 
 The final exported file is formatted in order to be easily imported in [Cytoscape](https://cytoscape.org/) to further explore your data!
