--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -46,14 +46,6 @@ title = {{docopt}: Command-Line Interface Specification Language},
   url = {https://CRAN.R-project.org/package=docopt},
   doi = {10.32614/CRAN.package.docopt},
 }
-@Manual{DT,
-title = {{DT}: A Wrapper of the JavaScript Library `{DataTables}'},
-  author = {Yihui Xie and Joe Cheng and Xianying Tan and Garrick Aden-Buie},
-  year = {2025},
-  note = {R package version 0.34.0},
-  url = {https://CRAN.R-project.org/package=DT},
-  doi = {10.32614/CRAN.package.DT},
-}
 @Manual{fs,
 title = {{fs}: Cross-Platform File System Operations Based on `{libuv}'},
   author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
@@ -61,14 +53,6 @@ title = {{fs}: Cross-Platform File System Operations Based on `{libuv}'},
   note = {R package version 1.6.6},
   url = {https://CRAN.R-project.org/package=fs},
   doi = {10.32614/CRAN.package.fs},
-}
-@Manual{gt,
-title = {{gt}: Easily Create Presentation-Ready Display Tables},
-  author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and Alexandra Lauer and JooYoung Seo and Ken Brevoort and Olivier Roy},
-  year = {2025},
-  note = {R package version 1.1.0},
-  url = {https://CRAN.R-project.org/package=gt},
-  doi = {10.32614/CRAN.package.gt},
 }
 @Manual{httr2,
   title = {httr2: Perform HTTP Requests and Process the Responses},
@@ -260,14 +244,6 @@ title = {{shiny}: Web Application Framework for R},
   url = {https://CRAN.R-project.org/package=shiny},
   doi = {10.32614/CRAN.package.shiny},
 }
-@Manual{shinybusy,
-title = {{shinybusy}: Busy Indicators and Notifications for `{Shiny}' Applications},
-  author = {Fanny Meyer and Victor Perrier},
-  year = {2024},
-  note = {R package version 0.3.3},
-  url = {https://CRAN.R-project.org/package=shinybusy},
-  doi = {10.32614/CRAN.package.shinybusy},
-}
 @Manual{shinyhelper,
 title = {{shinyhelper}: Easily Add Markdown Help Files to `{shiny}' App Elements},
   author = {Chris Mason-Thom},
@@ -299,14 +275,6 @@ title = {{shinyvalidate}: Input Validation for Shiny Apps},
   note = {R package version 0.1.3},
   url = {https://CRAN.R-project.org/package=shinyvalidate},
   doi = {10.32614/CRAN.package.shinyvalidate},
-}
-@Manual{shinyWidgets,
-title = {{shinyWidgets}: Custom Inputs Widgets for Shiny},
-  author = {Victor Perrier and Fanny Meyer and David Granjon},
-  year = {2025},
-  note = {R package version 0.9.0},
-  url = {https://CRAN.R-project.org/package=shinyWidgets},
-  doi = {10.32614/CRAN.package.shinyWidgets},
 }
 @Article{Spectra,
   title = {A Modular and Expandable Ecosystem for Metabolomics Data Annotation in R},
@@ -397,14 +365,6 @@ title = {{tima}: Taxonomically Informed Metabolite Annotation},
   pmid = {1708947},
   qid = {Q91218352},
 }
-@Manual{visNetwork,
-title = {{visNetwork}: Network Visualization using `{vis.js}' Library},
-  author = {{Almende B.V. and Contributors} and Benoit Thieurmel},
-  year = {2025},
-  note = {R package version 2.1.4},
-  url = {https://CRAN.R-project.org/package=visNetwork},
-  doi = {10.32614/CRAN.package.visNetwork},
-}
 @Manual{withr,
 title = {{withr}: Run Code `{With}' Temporarily Modified Global State},
   author = {Jim Hester and Lionel Henry and Kirill Müller and Kevin Ushey and Hadley Wickham and Winston Chang},
@@ -415,9 +375,9 @@ title = {{withr}: Run Code `{With}' Temporarily Modified Global State},
 }
 @Manual{yaml,
 title = {{yaml}: Methods to Convert R Data to YAML and Back},
-  author = {Shawn P Garbett and Jeremy Stephens and Kirill Simonov and Yihui Xie and Zhuoer Dong and Hadley Wickham and Jeffrey Horner and {reikoch} and Will Beasley and Brendan O'Connor and Gregory R. Warnes and Michael Quinn and Zhian N. Kamvar and Charlie Gao},
-  year = {2024},
-  note = {R package version 2.3.10},
+  author = {Jeremy Stephens and Kirill Simonov},
+  year = {2025},
+  note = {R package version 2.3.11},
   url = {https://CRAN.R-project.org/package=yaml},
   doi = {10.32614/CRAN.package.yaml},
 }
