--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -181,6 +181,14 @@ title = {{msentropy}: Spectral Entropy for Mass Spectrometry Data},
   url = {https://CRAN.R-project.org/package=msentropy},
   doi = {10.32614/CRAN.package.msentropy},
 }
+@Manual{Rutils,
+title = {{R.utils}: Various Programming Utilities},
+  author = {Henrik Bengtsson},
+  year = {2025},
+  note = {R package version 2.13.0},
+  url = {https://CRAN.R-project.org/package=R.utils},
+  doi = {10.32614/CRAN.package.R.utils},
+}
 @Manual{reticulate,
 title = {{reticulate}: Interface to `{Python}'},
   author = {Kevin Ushey and JJ Allaire and Yuan Tang},
@@ -238,9 +246,9 @@ title = {{rmarkdown}: Dynamic Documents for R},
 }
 @Manual{shiny,
 title = {{shiny}: Web Application Framework for R},
-  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Garrick Aden-Buie and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
   year = {2025},
-  note = {R package version 1.11.1},
+  note = {R package version 1.12.0},
   url = {https://CRAN.R-project.org/package=shiny},
   doi = {10.32614/CRAN.package.shiny},
 }
