--- a/README.qmd
+++ b/README.qmd
@@ -139,6 +139,7 @@ General: <https://doi.org/10.1038/s41592-019-0344-8>
 
 ### Others
 
+-   BiGG: <https://doi.org/10.1093/nar/gkv1049>
 -   ECMDB 2.0: <https://doi.org/10.1093/nar/gkv1060>
 -   HMDB 5.0: <https://doi.org/10.1093/nar/gkab1062>
 -   MassBank: <https://doi.org/10.5281/zenodo.3378723>
@@ -147,7 +148,7 @@ General: <https://doi.org/10.1038/s41592-019-0344-8>
 
 ## Additional software credits
 
-```{r, echo = FALSE, message = FALSE}
+```{r, "deps", echo = FALSE, message = FALSE}
 # Check if DESCRIPTION is in current dir
 # Else `altdoc` will not find the dependencies
 desc_path <- if (file.exists("DESCRIPTION")) {
